xfs_scrub_all: support metadata+media scans of all filesystems
Add the necessary systemd services and control bits so that
xfs_scrub_all can kick off a metadata+media scan of a filesystem.

Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Christoph Hellwig <hch@lst.de>

--- a/man/man8/xfs_scrub_all.8
+++ b/man/man8/xfs_scrub_all.8
@@ -4,7 +4,7 @@ xfs_scrub_all \- scrub all mounted XFS filesystems
 .SH SYNOPSIS
 .B xfs_scrub_all
 [
-.B \-hV
+.B \-hxV
 ]
 .SH DESCRIPTION
 .B xfs_scrub_all
@@ -20,6 +20,9 @@ the same device simultaneously.
 .TP
 .B \-h
 Display help.
+.TP
+.B \-x
+Read all file data extents to look for disk errors.
 .TP
 .B \-V
 Prints the version number and exits.
