xfs_scrub: add an optimization-only mode
Add a "preen" mode in which we only optimize filesystem metadata.
Repairs will result in early exits.

Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Reviewed-by: Christoph Hellwig <hch@lst.de>

--- a/man/man8/xfs_scrub.8
+++ b/man/man8/xfs_scrub.8
@@ -4,7 +4,7 @@ xfs_scrub \- check and repair the contents of a mounted XFS filesystem
 .SH SYNOPSIS
 .B xfs_scrub
 [
-.B \-abCeMmnTvx
+.B \-abCeMmnpTvx
 ]
 .I mount-point
 .br
@@ -127,6 +127,10 @@ By default, the percentage threshold is 99%.
 Treat informational messages as warnings.
 This will result in a nonzero return code, and a higher logging level.
 .RE
+.TP
+.B \-p
+Only optimize filesystem metadata.
+If repairs are required, report them and exit.
 .TP
 .BI \-T
 Print timing and memory usage information for each phase.
