--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xfsprogs (6.12.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Nathan Scott <nathans@debian.org>  Thu, 02 Dec 2024 14:00:00 +0100
+
 xfsprogs (6.11.0-1) unstable; urgency=low
 
   * New upstream release
