--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,3 +1,24 @@
+xfsprogs-6.12.0 (02 Dec 2024)
+	xfs_io: add support for atomic write statx fields (Catherine Hoang)
+	xfs_repair: fix crasher in pf_queuing_worker (Darrick J. Wong)
+	xfs: Reduce unnecessary searches when searching for the best extents (Chi Zhiling)
+	xfs_spaceman: add dependency on libhandle target (Jan Palus)
+	mkfs: add a config file for 6.12 LTS kernels (Darrick J. Wong)
+	xfs_scrub_all: wait for services to start activating (Darrick J. Wong)
+	xfs_repair: checking rt free space metadata must happen during phase 4 (Darrick J. Wong)
+	xfs_db: allow setting current address to log blocks (Darrick J. Wong)
+	xfs_db: convert rtsummary geometry (Darrick J. Wong)
+	xfs_db: convert rtbitmap geometry (Darrick J. Wong)
+	xfs_db: enable conversion of rt space units (Darrick J. Wong)
+	xfs_db: access arbitrary realtime blocks and extents (Darrick J. Wong)
+	xfs_db: access realtime file blocks (Darrick J. Wong)
+	xfs_db: make the daddr command target the realtime device (Darrick J. Wong)
+	xfs_db: report the realtime device when associated with each io cursor (Darrick J. Wong)
+	xfs_db: support passing the realtime device to the debugger (Darrick J. Wong)
+	xfs_io: add atomic file update commands to exercise file commit range (Darrick J. Wong)
+	xfs_io: add a commitrange option to the exchangerange command (Darrick J. Wong)
+	xfs_fsr: port to new file exchange library function (Darrick J. Wong)
+
 xfsprogs-6.11.0 (19 Oct 2024)
 	Cleanups and bugfixes in mkfs/xfs_db/repair/scrub/mdrestore (Darrick J. Wong)
 	Drop libattr dependency (Darrick J. Wong)
