--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,3 +1,107 @@
+xfsprogs-6.13.0 (13 Feb 2025)
+	xfs_protofile: fix device number encoding (Darrick J. Wong)
+	xfs_protofile: fix mode formatting error (Darrick J. Wong)
+	mkfs: fix file size setting when interpreting a protofile (Darrick J. Wong)
+	xfs_repair: require zeroed quota/rt inodes in metadir superblocks (Darrick J. Wong)
+	mkfs: use a default sector size that is also suitable for the rtdev (Christoph Hellwig)
+	xfs_scrub_all.timer: don't run if /var/lib/xfsprogs is readonly (Darrick J. Wong)
+	xfs_logprint: Fix super block buffer interpretation issue (Chi Zhiling)
+	mkfs: allow sizing realtime allocation groups for concurrency (Darrick J. Wong)
+	build: initialize stack variables to zero by default (Darrick J. Wong)
+	m4: fix statx override selection if /usr/include doesn't define it (Darrick J. Wong)
+	mkfs: fix parsing of value-less -d/-l concurrency cli option (Darrick J. Wong)
+	xfs_db: improve error message when unknown btree type given to btheight (Darrick J. Wong)
+	xfs_repair: don't obliterate return codes (Darrick J. Wong)
+	xfs_db: fix multiple dblock commands (Darrick J. Wong)
+	xfs: don't return an error from xfs_update_last_rtgroup_size for !XFS_RT (Christoph Hellwig)
+	xfs_io: add extsize command support (Ojaswin Mujoo)
+	xfs_io: allow foreign FSes to show FS_IOC_FSGETXATTR details (Ojaswin Mujoo)
+	mkfs: enable rt quota options (Darrick J. Wong)
+	xfs_quota: report warning limits for realtime space quotas (Darrick J. Wong)
+	mkfs: add quota flags when setting up filesystem (Darrick J. Wong)
+	xfs_repair: try not to trash qflags on metadir filesystems (Darrick J. Wong)
+	xfs_repair: support quota inodes in the metadata directory (Darrick J. Wong)
+	xfs_db: support metadir quotas (Darrick J. Wong)
+	libfrog: scrub quota file metapaths (Darrick J. Wong)
+	mkfs: format realtime groups (Darrick J. Wong)
+	mkfs: add headers to realtime bitmap blocks (Darrick J. Wong)
+	xfs_scrub: use histograms to speed up phase 8 on the realtime volume (Darrick J. Wong)
+	xfs_scrub: trim realtime volumes too (Darrick J. Wong)
+	xfs_scrub: call GETFSMAP for each rt group in parallel (Darrick J. Wong)
+	xfs_scrub: cleanup fsmap keys initialization (Christoph Hellwig)
+	xfs_scrub: check rtgroup metadata directory connections (Darrick J. Wong)
+	xfs_scrub: scrub realtime allocation group metadata (Darrick J. Wong)
+	xfs_spaceman: report on realtime group health (Darrick J. Wong)
+	xfs_mdrestore: restore rt group superblocks to realtime device (Darrick J. Wong)
+	xfs_io: display rt group in verbose fsmap output (Darrick J. Wong)
+	xfs_io: display rt group in verbose bmap output (Darrick J. Wong)
+	xfs_io: add a command to display realtime group information (Darrick J. Wong)
+	xfs_io: add a command to display allocation group information (Darrick J. Wong)
+	xfs_io: support scrubbing rtgroup metadata paths (Darrick J. Wong)
+	xfs_io: support scrubbing rtgroup metadata (Darrick J. Wong)
+	xfs_db: report rt group and block number in the bmap command (Darrick J. Wong)
+	xfs_db: dump rt summary blocks (Darrick J. Wong)
+	xfs_db: dump rt bitmap blocks (Darrick J. Wong)
+	xfs_db: metadump realtime devices (Darrick J. Wong)
+	xfs_db: metadump metadir rt bitmap and summary files (Christoph Hellwig)
+	xfs_db: enable conversion of rt space units (Darrick J. Wong)
+	xfs_db: support changing the label and uuid of rt superblocks (Darrick J. Wong)
+	xfs_db: support dumping realtime group data and superblocks (Darrick J. Wong)
+	xfs_db: listify the definition of enum typnm (Darrick J. Wong)
+	xfs_db: enable rtconvert to handle segmented rtblocks (Darrick J. Wong)
+	xfs_db: enable the rtblock and rtextent commands for segmented rt block numbers (Darrick J. Wong)
+	xfs_repair: repair rtbitmap and rtsummary block headers (Darrick J. Wong)
+	xfs_repair: support realtime superblocks (Darrick J. Wong)
+	xfs_repair: find and clobber rtgroup bitmap and summary files (Darrick J. Wong)
+	xfs_repair: support realtime groups (Darrick J. Wong)
+	xfs_repair: add a real per-AG bitmap abstraction (Christoph Hellwig)
+	xfs_repair: simplify rt_lock handling (Christoph Hellwig)
+	xfs_repair: improve rtbitmap discrepancy reporting (Darrick J. Wong)
+	xfs_repair: refactor offsetof+sizeof to offsetofend (Darrick J. Wong)
+	xfs_repair: refactor phase4 (Christoph Hellwig)
+	xfs_repair: adjust rtbitmap/rtsummary word updates to handle big endian values (Darrick J. Wong)
+	xfs_logprint: report realtime EFIs (Darrick J. Wong)
+	libfrog: add bitmap_clear (Darrick J. Wong)
+	libfrog: report rt groups in output (Darrick J. Wong)
+	libfrog: support scrubbing rtgroup metadata paths (Darrick J. Wong)
+	man: document rgextents geom field (Christoph Hellwig)
+	man: document the rt group geometry ioctl (Darrick J. Wong)
+	mkfs: add a utility to generate protofiles (Darrick J. Wong)
+	mkfs: support copying in xattrs (Darrick J. Wong)
+	mkfs: support copying in large or sparse files (Darrick J. Wong)
+	mkfs.xfs: enable metadata directories (Darrick J. Wong)
+	xfs_repair: do not count metadata directory files when doing quotacheck (Darrick J. Wong)
+	xfs_repair: truncate and unmark orphaned metadata inodes (Darrick J. Wong)
+	xfs_repair: drop all the metadata directory files during pass 4 (Darrick J. Wong)
+	xfs_repair: metadata dirs are never plausible root dirs (Darrick J. Wong)
+	xfs_repair: mark space used by metadata files (Darrick J. Wong)
+	xfs_repair: update incore metadata state whenever we create new files (Darrick J. Wong)
+	xfs_repair: don't let metadata and regular files mix (Darrick J. Wong)
+	xfs_repair: rebuild the metadata directory (Darrick J. Wong)
+	xfs_repair: check metadata inode flag (Darrick J. Wong)
+	xfs_repair: dont check metadata directory dirent inumbers (Darrick J. Wong)
+	xfs_repair: handle sb_metadirino correctly when zeroing supers (Darrick J. Wong)
+	xfs_scrub: re-run metafile scrubbers during phase 5 (Darrick J. Wong)
+	xfs_scrub: scan metadata directories during phase 3 (Darrick J. Wong)
+	xfs_scrub: tread zero-length read verify as an IO error (Darrick J. Wong)
+	xfs_spaceman: report health of metadir inodes too (Darrick J. Wong)
+	xfs_io: support scrubbing metadata directory paths (Darrick J. Wong)
+	xfs_io: support flag for limited bulkstat of the metadata directory (Darrick J. Wong)
+	xfs_db: drop the metadata checking code from blockget (Darrick J. Wong)
+	xfs_db: display di_metatype (Darrick J. Wong)
+	xfs_db: show the metadata root directory when dumping superblocks (Darrick J. Wong)
+	xfs_db: support metadata directories in the path command (Darrick J. Wong)
+	xfs_db: don't obfuscate metadata directories and attributes (Darrick J. Wong)
+	xfs_db: report metadir support for version command (Darrick J. Wong)
+	xfs_db: disable xfs_check when metadir is enabled (Darrick J. Wong)
+	xfs_io: support scrubbing metadata directory paths (Darrick J. Wong)
+	libfrog: report metadata directories in the geometry report (Darrick J. Wong)
+	man: update scrub ioctl documentation for metadir (Darrick J. Wong)
+	man2: document metadata directory flag in fsgeom ioctl (Darrick J. Wong)
+	man: document the -n parent mkfs option (Darrick J. Wong)
+	man: fix ioctl_xfs_commit_range man page install (Jan Palus)
+	xfs_repair: fix maximum file offset comparison (Darrick J. Wong)
+
 xfsprogs-6.12.0 (02 Dec 2024)
 	xfs_io: add support for atomic write statx fields (Catherine Hoang)
 	xfs_repair: fix crasher in pf_queuing_worker (Darrick J. Wong)
