--- a/man/man2/ioctl_xfs_scrub_metadata.2
+++ b/man/man2/ioctl_xfs_scrub_metadata.2
@@ -181,11 +181,12 @@ The link to examine can be specified in the same manner as
 .nf
 .B XFS_SCRUB_TYPE_RTBITMAP
 .B XFS_SCRUB_TYPE_RTSUM
+.B XFS_SCRUB_TYPE_RTRMAPBT
 .fi
 .TP
-.B XFS_SCRUB_TYPE_RTRMAPBT
+.B XFS_SCRUB_TYPE_RTREFCBT
 Examine a given realtime allocation group's free space bitmap, summary file,
-or reverse mapping btree, respectively.
+reverse mapping btree, or reference count btree, respectively.
 
 .PP
 .nf
@@ -250,6 +251,9 @@ Project quota file.
 .TP
 .B XFS_SCRUB_METAPATH_RTRMAPBT
 Realtime rmap btree file.
+.TP
+.B XFS_SCRUB_METAPATH_RTREFCOUNTBT
+Realtime reference count btree file.
 .RE
 
 The values of
